src/objects/Fleet_Asset_Detail__c/Fleet_Asset_Detail__c.object-meta.xml
<CustomObject>
    <description>BM 7/16/2013 - updated page layouts for Svcs Sf interfaces project</description>
    <label>Fleet Asset Aircraft</label>
    <nameField>
        <label>Fleet Asset Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fleet Asset Aircraft</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>