src/objects/Fleet_Asset_Detail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Account (Customer) Name associated with this Fleet entry.</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 AND ( NOT 2)</booleanFilter>
        <errorMessage>Account Status should not be inactive and Account Name should not contain Various</errorMessage>
        <filterItems>
            <field>Account.Customer_Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filterItems>
        <filterItems>
            <field>Account.Report_Account_Name_upper__c</field>
            <operation>contains</operation>
            <value>VARIOUS</value>
        </filterItems>
        <infoMessage>Account Status should not be inactive and Account Name should not contain &quot;Various&quot;</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fleet Asset Aircraft (Account)</relationshipLabel>
    <relationshipName>Fleet_Asset_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>