src/objects/Fleet_Asset_Detail__c/fields/Account_SBU__c.field-meta.xml
<CustomField>
    <fullName>Account_SBU__c</fullName>
    <formula>text(Account__r.Strategic_Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account SBU</label>
    <type>Text</type>
</CustomField>