src/objects/Fleet_Asset_Detail__c/fields/Aircraft_Age_Group__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Age_Group__c</fullName>
    <formula>if( Aircraft_Age__c &lt; 1 , &quot;1 year&quot; ,   if( Aircraft_Age__c &lt; 5 , &quot;1-4 years&quot; , if( Aircraft_Age__c &lt; 10 , &quot;5-9 years&quot; ,if( Aircraft_Age__c &lt; 15 , &quot;10-14 years&quot; ,if( Aircraft_Age__c &lt; 20 , &quot;15-19 years&quot; , &quot;&gt;20 years&quot; )))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aircraft Age Group</label>
    <type>Text</type>
</CustomField>