src/objects/Fleet_Asset_Detail__c/fields/Aircraft_Base__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Base__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircraft Base</label>
    <referenceTo>Aircraft_Base__c</referenceTo>
    <relationshipName>Fleet_Asset_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>