src/objects/Fleet_Asset_Detail__c/fields/Aircraft_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Delivery_Date__c</fullName>
    <label>Aircraft Delivery Date</label>
    <type>Date</type>
</CustomField>