src/objects/Fleet_Asset_Detail__c/fields/AMSTAT_base_ICAO__c.field-meta.xml
<CustomField>
    <fullName>AMSTAT_base_ICAO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AMSTAT Base ICAO</label>
    <referenceTo>Aircraft_Base__c</referenceTo>
    <relationshipLabel>Fleet Asset Aircraft (AMSTAT Base ICAO)</relationshipLabel>
    <relationshipName>Fleet_Asset_Aircraft1</relationshipName>
    <type>Lookup</type>
</CustomField>