src/objects/Fleet_Asset_Detail__c/fields/APU_Engine_OEM_Warranty_Period__c.field-meta.xml
<CustomField>
    <fullName>APU_Engine_OEM_Warranty_Period__c</fullName>
    <formula>ADDMONTHS(Aircraft_Delivery_Date__c,VALUE(Text((Platform_Name__r.APU_Engine_OEM_Warranty_Period__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APU Engine OEM Warranty Period</label>
    <type>Date</type>
</CustomField>