src/objects/Fleet_Asset_Detail__c/fields/APU_S_N__c.field-meta.xml
<CustomField>
    <fullName>APU_S_N__c</fullName>
    <label>APU S/N</label>
    <length>80</length>
    <type>Text</type>
</CustomField>