src/objects/Fleet_Asset_Detail__c/fields/Aviation_Manager__c.field-meta.xml
<CustomField>
    <fullName>Aviation_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aviation Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fleet Asset Aircraft (Aviation Manager)</relationshipLabel>
    <relationshipName>Fleet_Asset_Aircraft_AM2</relationshipName>
    <type>Lookup</type>
</CustomField>