src/objects/Fleet_Asset_Detail__c/fields/Base_ICAO1__c.field-meta.xml
<CustomField>
    <fullName>Base_ICAO1__c</fullName>
    <label>Base ICAO</label>
    <length>80</length>
    <type>Text</type>
</CustomField>