src/objects/Fleet_Asset_Detail__c/fields/Base_ICAO__c.field-meta.xml
<CustomField>
    <fullName>Base_ICAO__c</fullName>
    <formula>Aircraft_Base__r.Base_ICAO__c</formula>
    <label>Base ICAO</label>
    <type>Text</type>
</CustomField>