src/objects/Fleet_Asset_Detail__c/fields/BGA_ASM__c.field-meta.xml
<CustomField>
    <fullName>BGA_ASM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BGA ASM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fleet_Asset_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>