src/objects/Fleet_Asset_Detail__c/fields/BZV_CREATED_BY_ID__c.field-meta.xml
<CustomField>
    <fullName>BZV_CREATED_BY_ID__c</fullName>
    <description>BZV_CREATED_BY_ID__C</description>
    <inlineHelpText>Created on demand ( by Dieter for data migration).</inlineHelpText>
    <label>BZV CREATED BY ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>