src/objects/Fleet_Asset_Detail__c/fields/CAMO__c.field-meta.xml
<CustomField>
    <fullName>CAMO__c</fullName>
    <label>CAMO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Honeywell Authorized Service Center</fullName>
            </value>
            <value>
                <fullName>Independent CAMO Provider</fullName>
            </value>
            <value>
                <fullName>N/A (Non-EASA A/C)</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>