src/objects/Fleet_Asset_Detail__c/fields/Case_Associated__c.field-meta.xml
<CustomField>
    <fullName>Case_Associated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Associated</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Fleet Asset Aircraft</relationshipLabel>
    <relationshipName>Fleet_Asset_Aircraft</relationshipName>
    <type>Lookup</type>
</CustomField>