src/objects/Fleet_Asset_Detail__c/fields/Cntry__c.field-meta.xml
<CustomField>
    <fullName>Cntry__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Afghanistan</fullName>
            </value>
            <value>
                <fullName>Albania</fullName>
            </value>
            <value>
                <fullName>Algeria</fullName>
            </value>
            <value>
                <fullName>American Samoa</fullName>
            </value>
            <value>
                <fullName>Andorra</fullName>
            </value>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Anguilla</fullName>
            </value>
            <value>
                <fullName>Antigua &amp; Barbuda</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Armenia</fullName>
            </value>
            <value>
                <fullName>Aruba</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Azerbaijan</fullName>
            </value>
            <value>
                <fullName>Azores, Autonomous Region of</fullName>
            </value>
            <value>
                <fullName>Bahamas</fullName>
            </value>
            <value>
                <fullName>Bahrain</fullName>
            </value>
            <value>
                <fullName>Bangladesh</fullName>
            </value>
            <value>
                <fullName>Barbados</fullName>
            </value>
            <value>
                <fullName>Belarus</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Belize</fullName>
            </value>
            <value>
                <fullName>Benin</fullName>
            </value>
            <value>
                <fullName>Bermuda</fullName>
            </value>
            <value>
                <fullName>Bhutan</fullName>
            </value>
            <value>
                <fullName>Bolivia</fullName>
            </value>
            <value>
                <fullName>Bosnia &amp; Herzegovina</fullName>
            </value>
            <value>
                <fullName>Botswana</fullName>
            </value>
            <value>
                <fullName>Bouvet Island</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>