src/objects/Fleet_Asset_Detail__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Defines Comments associated with the current Fleet Asset.</inlineHelpText>
    <label>Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>