src/objects/Fleet_Asset_Detail__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fleet Asset Aircraft</relationshipLabel>
    <relationshipName>Fleet_Asset_Aircraft</relationshipName>
    <type>Lookup</type>
</CustomField>