src/objects/Fleet_Asset_Detail__c/fields/Dassault_Operator__c.field-meta.xml
<CustomField>
    <fullName>Dassault_Operator__c</fullName>
    <description>For Dassault FalconConnect use only</description>
    <inlineHelpText>For Dassault FalconConnect use only!</inlineHelpText>
    <label>Dassault Operator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>