src/objects/Fleet_Asset_Detail__c/fields/Engine_Model__c.field-meta.xml
<CustomField>
    <fullName>Engine_Model__c</fullName>
    <label>Engine Model</label>
    <length>20</length>
    <type>Text</type>
</CustomField>