src/objects/Fleet_Asset_Detail__c/fields/Engine_Type__c.field-meta.xml
<CustomField>
    <fullName>Engine_Type__c</fullName>
    <inlineHelpText>The Engine Type for the current Fleet entry.</inlineHelpText>
    <label>Engine Type</label>
    <type>TextArea</type>
</CustomField>