src/objects/Fleet_Asset_Detail__c/fields/FG_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>FG_Serial_Number__c</fullName>
    <description>FG_Serial_Number</description>
    <label>FG_Serial_Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>