src/objects/Fleet_Asset_Detail__c/fields/Fleet_Asset_Notification__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Asset_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fleet Asset Notification</label>
    <type>Checkbox</type>
</CustomField>