src/objects/Fleet_Asset_Detail__c/fields/FSE_Avionics__c.field-meta.xml
<CustomField>
    <fullName>FSE_Avionics__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FSE Avionics</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fleet Asset Aircraft (FSE Avionics)</relationshipLabel>
    <relationshipName>Fleet_Asset_Aircraft_FSE_A</relationshipName>
    <type>Lookup</type>
</CustomField>