src/objects/Fleet_Asset_Detail__c/fields/Inside_Sales__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inside Sales</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fleet_Asset_Aircraft3</relationshipName>
    <type>Lookup</type>
</CustomField>