src/objects/Fleet_Asset_Detail__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <formula>Platform_Name__r.Make__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aircraft Make</label>
    <type>Text</type>
</CustomField>