src/objects/Fleet_Asset_Detail__c/fields/Make_Model__c.field-meta.xml
<CustomField>
    <fullName>Make_Model__c</fullName>
    <formula>Make__c &amp; &apos;-&apos; &amp;  Model__c</formula>
    <label>Make &amp; Model</label>
    <type>Text</type>
</CustomField>