src/objects/Fleet_Asset_Detail__c/fields/Managing_SBU__c.field-meta.xml
<CustomField>
    <fullName>Managing_SBU__c</fullName>
    <formula>text( Platform_Name__r.Managing_SBU__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Managing SBU</label>
    <type>Text</type>
</CustomField>