src/objects/Fleet_Asset_Detail__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <formula>Platform_Name__r.Model__c</formula>
    <label>Aircraft Model</label>
    <type>Text</type>
</CustomField>