src/objects/Fleet_Asset_Detail__c/fields/New_Alert_Identification__c.field-meta.xml
<CustomField>
    <fullName>New_Alert_Identification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Alert Identification</label>
    <type>Checkbox</type>
</CustomField>