src/objects/Fleet_Asset_Detail__c/fields/OEM_Name__c.field-meta.xml
<CustomField>
    <fullName>OEM_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The OEM / Maker Name for the current Fleet entry.</inlineHelpText>
    <label>OEM Name</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>OEM Name: Account Status should not be inactive and Account Name should not contain Various</errorMessage>
        <filterItems>
            <field>Account.Report_Account_Name_upper__c</field>
            <operation>contains</operation>
            <value>VARIOUS</value>
        </filterItems>
        <infoMessage>Account Status should not be inactive and Account Name should not contain &quot;Various&quot;</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fleet Asset Aircraft (OEM Name)</relationshipLabel>
    <relationshipName>Fleet_Asset_Detail1</relationshipName>
    <type>Lookup</type>
</CustomField>