src/objects/Fleet_Asset_Detail__c/fields/OEM_Warranty_Period__c.field-meta.xml
<CustomField>
    <fullName>OEM_Warranty_Period__c</fullName>
    <formula>ADDMONTHS(Aircraft_Delivery_Date__c,VALUE(Text((Platform_Name__r.OEM_Warranty_Period__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avionics OEM Warranty Period</label>
    <type>Date</type>
</CustomField>