src/objects/Fleet_Asset_Detail__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fleet Asset Aircraft (Owner)</relationshipLabel>
    <relationshipName>Fleet_Asset_Aircraft2</relationshipName>
    <type>Lookup</type>
</CustomField>