src/objects/Fleet_Asset_Detail__c/fields/Platform_Name__c.field-meta.xml
<CustomField>
    <fullName>Platform_Name__c</fullName>
    <inlineHelpText>The Platform Name for the current Fleet entry.</inlineHelpText>
    <label>Platform Name</label>
    <referenceTo>Platform__c</referenceTo>
    <relationshipLabel>Fleet Asset Aircraft (Platform Name)</relationshipLabel>
    <relationshipName>Fleet_Asset_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>