src/objects/Fleet_Asset_Detail__c/fields/Platform_Type__c.field-meta.xml
<CustomField>
    <fullName>Platform_Type__c</fullName>
    <inlineHelpText>The Fleet entry&apos;s Platform Type.</inlineHelpText>
    <label>Platform Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>