src/objects/Fleet_Asset_Detail__c/fields/Previous_D_Check_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_D_Check_Event_Date__c</fullName>
    <label>Last verified &quot;D&quot; Check Event Date</label>
    <type>Date</type>
</CustomField>