src/objects/Fleet_Asset_Detail__c/fields/Region1__c.field-meta.xml
<CustomField>
    <fullName>Region1__c</fullName>
    <label>Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>