src/objects/Fleet_Asset_Detail__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>Asia/Pacific Rim</fullName>
            </value>
            <value>
                <fullName>Europe/MiddleEast/Africa/India</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>