src/objects/Fleet_Asset_Detail__c/fields/Satellite__c.field-meta.xml
<CustomField>
    <fullName>Satellite__c</fullName>
    <label>Satellite</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AERO-C</fullName>
            </value>
            <value>
                <fullName>AERO-H</fullName>
            </value>
            <value>
                <fullName>AERO-H+</fullName>
            </value>
            <value>
                <fullName>AERO-I</fullName>
            </value>
            <value>
                <fullName>Iridium Aircell</fullName>
            </value>
            <value>
                <fullName>Iridium Airsat II</fullName>
            </value>
            <value>
                <fullName>Iridium ICG</fullName>
            </value>
            <value>
                <fullName>Iridium TrueNorth</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>