src/objects/Fleet_Asset_Detail__c/fields/Sbl_Owner_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Sbl_Owner_Account_ID__c</fullName>
    <label>Sbl Owner Account ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>