src/objects/Fleet_Asset_Detail__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <inlineHelpText>The Serial Number of the current Fleet entry.</inlineHelpText>
    <label>Serial Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>