src/objects/Fleet_Asset_Detail__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <description>Field created for Service Interface project</description>
    <label>Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>