src/objects/Fleet_Asset_Detail__c/fields/SOURCE_FILE_UPDATED_ON_DT__c.field-meta.xml
<CustomField>
    <fullName>SOURCE_FILE_UPDATED_ON_DT__c</fullName>
    <label>Source File Updated</label>
    <type>DateTime</type>
</CustomField>