src/objects/Fleet_Asset_Detail__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>In Service</fullName>
            </value>
            <value>
                <fullName>On order</fullName>
                <label>On Order</label>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Type swap</fullName>
                <label>Type Swap</label>
            </value>
            <value>
                <fullName>Written off</fullName>
                <label>Written Off</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>On option</fullName>
                <label>On Option</label>
            </value>
            <value>
                <fullName>LOI to Option</fullName>
            </value>
            <value>
                <fullName>LOI to Order</fullName>
            </value>
            <value>
                <fullName>Reengineered</fullName>
            </value>
            <value>
                <fullName>For Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>