src/objects/Fleet_Asset_Detail__c/fields/Tail_Number__c.field-meta.xml
<CustomField>
    <fullName>Tail_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>The Fleet entry&apos;s registered Tail Number.</inlineHelpText>
    <label>Tail Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>