src/objects/Fleet_Asset_Detail__c/fields/Tail_reg_num_without_hypen__c.field-meta.xml
<CustomField>
    <fullName>Tail_reg_num_without_hypen__c</fullName>
    <formula>SUBSTITUTE(Tail_Number__c, &quot;-&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tail_reg_num_without_hypen</label>
    <type>Text</type>
</CustomField>