src/objects/Fleet_Asset_Detail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>The Fleet entry&apos;s Type.</inlineHelpText>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>