src/objects/Fleet_Asset_Detail__c/listViews/Alternate.listView-meta.xml
<ListView>
    <fullName>Alternate</fullName>
    <columns>Alternate_Account__c</columns>
    <columns>NAME</columns>
    <columns>Platform_Name__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Tail_Number__c</columns>
    <columns>Serial_Number_Format__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Site_Name__c</columns>
    <columns>Site_Id__c</columns>
    <columns>Base_City__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Alternate_Account__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Alternate</label>
    <language>en_US</language>
</ListView>