src/objects/Fleet_Asset_Detail__c/listViews/B777.listView-meta.xml
<ListView>
    <fullName>B777</fullName>
    <columns>NAME</columns>
    <columns>Platform_Name__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Tail_Number__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Operator__c</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Make__c</field>
        <operation>contains</operation>
        <value>77</value>
    </filters>
    <label>Boeing 777</label>
    <language>en_US</language>
</ListView>