src/objects/Fleet_Asset_Detail__c/listViews/Cessna.listView-meta.xml
<ListView>
    <fullName>Cessna</fullName>
    <columns>NAME</columns>
    <columns>Platform_Name__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Tail_Number__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Make__c</field>
        <operation>contains</operation>
        <value>Cessna</value>
    </filters>
    <label>Cessna</label>
</ListView>