src/objects/Fleet_Asset_Detail__c/listViews/DS.listView-meta.xml
<ListView>
    <fullName>DS</fullName>
    <columns>NAME</columns>
    <columns>Platform_Name__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Tail_Number__c</columns>
    <columns>Serial_Number_Format__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Platform_Name__c</field>
        <operation>contains</operation>
        <value>gulfstream</value>
    </filters>
    <label>D&amp;S</label>
</ListView>