src/objects/Fleet_Asset_Detail__c/listViews/Legacy_Fleet_wtih_Serial_number.listView-meta.xml
<ListView>
    <fullName>Legacy_Fleet_wtih_Serial_number</fullName>
    <columns>NAME</columns>
    <columns>Aftermarket_Sales_Manager_ASM__c</columns>
    <columns>Aircraft_Delivery_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Operator__c</columns>
    <columns>Owner__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Make__c</field>
        <operation>contains</operation>
        <value>Embraer</value>
    </filters>
    <filters>
        <field>Model__c</field>
        <operation>contains</operation>
        <value>600</value>
    </filters>
    <label>Legacy 600 Fleet wtih Serial number</label>
    <language>en_US</language>
</ListView>