src/objects/Fleet_Asset_Detail__c/listViews/NA_Serial.listView-meta.xml
<ListView>
    <fullName>NA_Serial</fullName>
    <columns>NAME</columns>
    <columns>Platform_Name__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Tail_Number__c</columns>
    <columns>Serial_Number_Format__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Platform_Name__c</field>
        <operation>equals</operation>
    </filters>
    <label>NA Serial</label>
</ListView>