src/objects/Fleet_Asset_Detail__c/listViews/New_Last_Month.listView-meta.xml
<ListView>
    <fullName>New_Last_Month</fullName>
    <columns>NAME</columns>
    <columns>Platform_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Tail_Number__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Site_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Site_Id__c</columns>
    <columns>Serial_Number_Format__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Base_City__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active,Inactive</value>
    </filters>
    <filters>
        <field>Model__c</field>
        <operation>notContain</operation>
        <value>58,King Air</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>New Last Month</label>
    <language>en_US</language>
</ListView>