src/objects/Fleet_Asset_Detail__c/listViews/New_This_Month.listView-meta.xml
<ListView>
    <fullName>New_This_Month</fullName>
    <columns>NAME</columns>
    <columns>Platform_Name__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Tail_Number__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Serial_Number_Format__c</columns>
    <columns>Site_Name__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Site_Id__c</columns>
    <columns>Base_City__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>notContain</operation>
        <value>FA</value>
    </filters>
    <label>New This Month</label>
    <language>en_US</language>
</ListView>